# osintbuddy-plugins

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  publish.yml
src/: README.md
src/osintbuddy/: __init__.py  ascii.py  errors.py  manager.py  ob.py  plugins.py  server.py  utils.py
src/osintbuddy/elements/: __init__.py  base.py  displays.py  inputs.py
src/osintbuddy/entities/: INDEX.md
src/osintbuddy/examples/: ip-plugin.py
src/osintbuddy/node/: __init__.py  base.py  displays.py  inputs.py
src/osintbuddy/templates/: __init__.py  default.py
src/osintbuddy/utils/: __init__.py  generic.py
src/python_package/: osintbuddy.py
tests/: plugins.py  test_methods.py
