[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name =  "osintbuddy"
authors = [
    {name = "jerlendds", email = "support@forum.osintbuddy.com"},
]
description = "OSINTBuddy - mine, merge, and map data for novel insights"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "selenium>=4.9.0",
    "sqlalchemy-json==0.7.0",
    "SQLAlchemy-Utils==0.41.1",
    "playwright>=1.39.0",
    "httpx>=0.25.0",
    "beautifulsoup4==4.12.2",
    "pyfiglet==0.8.post1",
    "termcolor==2.3.0",
    "fastapi==0.103.2",
    "uvicorn==0.22.0",
    "uvloop==0.17.0",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "yq==3.2.3",
    "jedi-language-server==0.41.1",
    "websockets==11.0.3"
]
[project.optional-dependencies]
test = [
    "astroid==2.15.4",
    "colorama==0.4.6",
    "dill==0.3.6",
    "eradicate==2.2.0",
    "exceptiongroup==1.1.1",
    "iniconfig==2.0.0",
    "isort==5.12.0",
    "lazy-object-proxy==1.9.0",
    "mando==0.7.1",
    "mccabe==0.7.0",
    "mypy==1.3.0",
    "mypy-extensions==1.0.0",
    "packaging==23.1",
    "platformdirs==3.5.1",
    "pluggy==1.0.0",
    "pycodestyle==2.10.0",
    "pydocstyle==6.3.0",
    "pyflakes==3.0.1",
    "pylama==8.4.1",
    "pylint==2.17.4",
    "pytest==7.3.1",
    "radon==6.0.1",
    "six==1.16.0",
    "snowballstemmer==2.2.0",
    "toml==0.10.2",
    "tomli==2.0.1",
    "tomlkit==0.11.8",
    "typing-extensions==4.5.0",
    "vulture==2.7",
    "wrapt==1.15.0",
]

[project.urls]
Documentation = "https://docs.osintbuddy.com/"
Source = "https://github.com/jerlendds/osintbuddy-plugins"
Tracker = "https://github.com/jerlendds/osintbuddy/issues"

[tool.flit.module]
name = "osintbuddy"

[tool.bandit]
exclude_dirs = ["build","dist","tests","scripts"]
number = 4
recursive = true
targets = "src"

[tool.black]
line-length = 120
fast = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.flake8]
max-line-length = 120
select = "F,E,W,B,B901,B902,B903"
exclude = [
    ".eggs",
    ".git",
    ".tox",
    "nssm",
    "obj",
    "out",
    "packages",
    "pywin32",
    "tests",
    "swagger_client"
]
ignore = [
    "E722",
    "B001",
    "W503",
    "E203"
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
venv = "env37"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.7"
pythonPlatform = "Linux"

executionEnvironments = [
    { root = "src" }
]

[tool.pytest.ini_options]
addopts = ""
pythonpath = [
    "src"
]
testpaths = "tests"
junit_family = "xunit2"
markers = [
    "integration: marks as integration test",
    "notebooks: marks as notebook test",
    "gpu: marks as gpu test",
    "spark: marks tests which need Spark",
    "slow: marks tests as slow",
    "unit: fast offline tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py, integration, spark, all

[testenv]
commands =
    pytest -m "not integration and not spark" {posargs}

[testenv:integration]
commands =
    pytest -m "integration" {posargs}

[testenv:spark]
extras = spark
setenv =
    PYSPARK_DRIVER_PYTHON = {envpython}
    PYSPARK_PYTHON = {envpython}
commands =
    pytest -m "spark" {posargs}

[testenv:all]
extras = all
setenv =
    PYSPARK_DRIVER_PYTHON = {envpython}
    PYSPARK_PYTHON = {envpython}
commands =
    pytest {posargs}
"""

[tool.pylint]
extension-pkg-whitelist= [
    "numpy",
    "torch",
    "cv2",
    "pyodbc",
    "pydantic",
    "ciso8601",
    "netcdf4",
    "scipy"
]
ignore="CVS"
ignore-patterns="test.*?py,conftest.py"
init-hook='import sys; sys.setrecursionlimit(8 * sys.getrecursionlimit())'
jobs=0
limit-inference-results=100
persistent="yes"
suggestion-mode="yes"
unsafe-load-any-extension="no"

[tool.pylint.'MESSAGES CONTROL']
enable="c-extension-no-member"

[tool.pylint.'REPORTS']
evaluation="10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)"
output-format="text"
reports="no"
score="yes"

[tool.pylint.'REFACTORING']
max-nested-blocks=5
never-returning-functions="sys.exit"

[tool.pylint.'BASIC']
argument-naming-style="snake_case"
attr-naming-style="snake_case"
bad-names= [
    "foo",
    "bar"
]
class-attribute-naming-style="any"
class-naming-style="PascalCase"
const-naming-style="UPPER_CASE"
docstring-min-length=-1
function-naming-style="snake_case"
good-names= [
    "i",
    "j",
    "k",
    "ex",
    "Run",
    "_"
]
include-naming-hint="yes"
inlinevar-naming-style="any"
method-naming-style="snake_case"
module-naming-style="any"
no-docstring-rgx="^_"
property-classes="abc.abstractproperty"
variable-naming-style="snake_case"

[tool.pylint.'FORMAT']
ignore-long-lines="^\\s*(# )?.*['\"]?<?https?://\\S+>?"
indent-after-paren=4
indent-string='    '
max-line-length=120
max-module-lines=1000
single-line-class-stmt="no"
single-line-if-stmt="no"

[tool.pylint.'LOGGING']
logging-format-style="old"
logging-modules="logging"

[tool.pylint.'MISCELLANEOUS']
notes= [
    "FIXME",
    "XXX",
    "TODO"
]

[tool.pylint.'SIMILARITIES']
ignore-comments="yes"
ignore-docstrings="yes"
ignore-imports="yes"
min-similarity-lines=7

[tool.pylint.'SPELLING']
max-spelling-suggestions=4
spelling-store-unknown-words="no"

[tool.pylint.'STRING']
check-str-concat-over-line-jumps="no"

[tool.pylint.'TYPECHECK']
contextmanager-decorators="contextlib.contextmanager"
generated-members="numpy.*,np.*,pyspark.sql.functions,collect_list"
ignore-mixin-members="yes"
ignore-none="yes"
ignore-on-opaque-inference="yes"
ignored-classes="optparse.Values,thread._local,_thread._local,numpy,torch,swagger_client"
ignored-modules="numpy,torch,swagger_client,netCDF4,scipy"
missing-member-hint="yes"
missing-member-hint-distance=1
missing-member-max-choices=1

[tool.pylint.'VARIABLES']
additional-builtins="dbutils"
allow-global-unused-variables="yes"
callbacks= [
    "cb_",
    "_cb"
]
dummy-variables-rgx="_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
ignored-argument-names="_.*|^ignored_|^unused_"
init-import="no"
redefining-builtins-modules="six.moves,past.builtins,future.builtins,builtins,io"

[tool.pylint.'CLASSES']
defining-attr-methods= [
    "__init__",
    "__new__",
    "setUp",
    "__post_init__"
]
exclude-protected= [
    "_asdict",
    "_fields",
    "_replace",
    "_source",
    "_make"
]
valid-classmethod-first-arg="cls"
valid-metaclass-classmethod-first-arg="cls"

[tool.pylint.'DESIGN']
max-args=5
max-attributes=7
max-bool-expr=5
max-branches=12
max-locals=15
max-parents=7
max-public-methods=20
max-returns=6
max-statements=50
min-public-methods=2

[tool.pylint.'IMPORTS']
allow-wildcard-with-all="no"
analyse-fallback-blocks="no"
deprecated-modules="optparse,tkinter.tix"

[tool.pylint.'EXCEPTIONS']
overgeneral-exceptions= [
    "BaseException",
    "Exception"
]
[tool.hatch.build.targets.sdist.force-include]
"bin/ob.py" = "osintbuddy/ob.py"

[tool.hatch.build.targets.wheel.force-include]
"bin/ob.py" = "osintbuddy/ob.py"

[project.scripts]
ob = "osintbuddy.ob:main"